--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Hello world</h1>
+  <p>About these site:</p>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, sit! Exercitationem error doloribus aliquam, molestias voluptate dicta in corrupti eum inventore impedit libero quis non officiis alias illo soluta nisi.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis, distinctio nemo possimus repellendus veritatis perspiciatis eos voluptatem culpa earum ad magni. Molestias illo incidunt, quasi aliquid aliquam expedita pariatur.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur vero architecto dicta deserunt maiores.</p>
