add Header Main and Footer

--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <header>
+    <h1>Hello world</h1>
+  </header>
+  <main>
+    <p>About these site:</p>
 
-  <p>About these site:</p>
-  
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, sit! Exercitationem error doloribus aliquam, molestias voluptate dicta in corrupti eum inventore impedit libero quis non officiis alias illo soluta nisi.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis, distinctio nemo possimus repellendus veritatis perspiciatis eos voluptatem culpa earum ad magni. Molestias illo incidunt, quasi aliquid aliquam expedita pariatur.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur vero architecto dicta deserunt maiores.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius possimus culpa repudiandae quaerat et voluptates, cupiditate quas maxime eaque accusamus praesentium animi earum laborum cumque eum! Quam, quo ipsum? Quia.</p>
+  </main>
+  <footer>
+    <p>Footer</p>
+  </footer>
 </body>
 <script src="practice.js"></script>
 </html>
