Update footer text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius possimus culpa repudiandae quaerat et voluptates, cupiditate quas maxime eaque accusamus praesentium animi earum laborum cumque eum! Quam, quo ipsum? Quia.</p>
   </main>
   <footer>
-    <p>Footer</p>
+    <p>Made by Frontend developer Andron Gyeorgiu</p>
   </footer>
 </body>
 <script src="practice.js"></script>
